SF-29 header 5, 6, 16 menu fix. Changed z-index.

--- a/common-files/less/navbar.less
+++ b/common-files/less/navbar.less
@@ -106,7 +106,7 @@ body > #header-16 {
   right: 0;
   left: 0;
   top: -100%;
-  z-index: 100;
+  z-index: 9999;
 }
 
 #header-dockbar ~ .nav-collapse {
